tests/baselines/reference/functionOverloadImplementationOfWrongName2.errors.txt
==== tests/cases/compiler/functionOverloadImplementationOfWrongName2.ts (1 errors) ====
    function foo(x);
    function bar() { }
             ~~~
!!! error TS1043: Function overload name must be 'foo'.
    function foo(x, y);